...
  Created by Ameed Khalid on 05/11/2025.
*/

// MARK: - Navigation & Tabs

"chat" = "Chat";
"history" = "History";
"settings" = "Settings";
"shamelaGPT" = "ShamelaAI";
"back" = "Back";
"done" = "Done";
"common.cancel" = "Cancel";

...
